--- a/src/Partage/PartageBundle/Resources/views/Security/login.html.twig
+++ b/src/Partage/PartageBundle/Resources/views/Security/login.html.twig
@@ -4,21 +4,21 @@
 
 {% block fos_user_content %}
 {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
 <form action="{{ path("fos_user_security_check") }}" method="post">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
 
-    <label for="username">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+    <label for="username" class="form-label">{{ 'Utilisateur'|trans }}</label>
+    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" class="form-control"/>
 
-    <label for="password">{{ 'security.login.password'|trans }}</label>
-    <input type="password" id="password" name="_password" required="required" />
+    <label for="password" class="form-label">{{ 'Mot de passe'|trans }}</label>
+    <input type="password" id="password" name="_password" required="required" class="form-control"/>
 
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+    <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
+    <label for="remember_me" class="form-label">{{ 'Se souvenir de moi'|trans }}</label>
 
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+    <input type="submit" id="_submit" name="_submit" value="{{ 'Connexion'|trans }}" class="btn btn-success form-control"/>
 </form>
 {% endblock fos_user_content %}
