--- a/src/Partage/PartageBundle/Resources/views/layout.html.twig
+++ b/src/Partage/PartageBundle/Resources/views/layout.html.twig
@@ -1,16 +1,24 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    {% if app.request.hasPreviousSession %}
-        {% for type, messages in app.session.flashbag.all() %}
-            {% for message in messages %}
-                <div class="flash-{{ type }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endfor %}
-    {% endif %}
-    <div>
-        {% block fos_user_content %}
-        {% endblock fos_user_content %}
+    <div class="container m-t-3 p-t-1">
+        <div class="row">
+            {% if app.request.hasPreviousSession %}
+                {% for type, messages in app.session.flashbag.all() %}
+                    <div class="alert alert-{{ type }}" role="alert">
+                        {% for message in messages %}
+                            <ul>
+                                <li>
+                                    <strong>{{ message }}</strong>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endfor %}
+            {% endif %}
+            <div class="col-md-4 col-md-offset-4 p-y-1">
+                {% block fos_user_content %}
+                {% endblock fos_user_content %}
+            </div>
+        </div>
     </div>
 {% endblock %}
