--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,7 +30,9 @@
                     </li>
                 </ul>
             </nav>{% endblock %}
-            {% block body %}{% endblock %}
+            {% block body %}
+                
+            {% endblock %}
             {% block javascripts %}{% endblock %}
             <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js" integrity="sha384-XXXXXXXX" crossorigin="anonymous"></script>
         </body>
