--- a/src/Partage/PartageBundle/Resources/views/Security/login.html.twig
+++ b/src/Partage/PartageBundle/Resources/views/Security/login.html.twig
@@ -1,24 +1,23 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
-
 {% trans_default_domain 'FOSUserBundle' %}
-
 {% block fos_user_content %}
-{% if error %}
-    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
-
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
-
-    <label for="username" class="form-label">{{ 'Utilisateur'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" class="form-control"/>
-
-    <label for="password" class="form-label">{{ 'Mot de passe'|trans }}</label>
-    <input type="password" id="password" name="_password" required="required" class="form-control"/>
-
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
-    <label for="remember_me" class="form-label">{{ 'Se souvenir de moi'|trans }}</label>
-
-    <input type="submit" id="_submit" name="_submit" value="{{ 'Connexion'|trans }}" class="btn btn-success form-control"/>
-</form>
+	{% if error %}
+		<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+	{% endif %}
+	<form action="{{ path("fos_user_security_check") }}" method="post">
+		<input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
+		<div class="form-group">
+			<label for="username" class="form-label">{{ 'Utilisateur'|trans }}</label>
+			<input type="text" id="username" name="_username" value="{{ last_username }}" required="required" class="form-control"/>
+		</div>
+		<div class="form-group">
+			<label for="password" class="form-label">{{ 'Mot de passe'|trans }}</label>
+			<input type="password" id="password" name="_password" required="required" class="form-control"/>
+		</div>
+		<div class="form-group">
+			<input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
+			<label for="remember_me" class="form-label">{{ 'Se souvenir de moi'|trans }}</label>
+		</div>
+		<input type="submit" id="_submit" name="_submit" value="{{ 'Connexion'|trans }}" class="btn btn-success"/>
+	</form>
 {% endblock fos_user_content %}
