--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,7 @@
                 <ul class="nav navbar-nav pull-md-right">
                     <li class="nav-item">
                         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                            <a class="nav-link" href="{{ path('fos_user_profile_show') }}"> Connecté en tant que: {{app.user.username }}</a>
+                            <a class="nav-link" href="{{ path('fos_user_profile_edit') }}"> Connecté en tant que: {{app.user.username }}</a>
                             
                         {% else %}
                             <a class="nav-link" href="{{ path('fos_user_security_login') }}">{{ 'Connexion'|trans({}, 'FOSUserBundle') }}</a>
