--- a/app/Resources/views/association/new.html.twig
+++ b/app/Resources/views/association/new.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% form_theme form ":BootstrapTemplate:bootstrap.html.twig" %}
 {% block body %}
     <h1>Association creation</h1>
 
@@ -8,9 +8,4 @@
         <input type="submit" value="Create" />
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('association_index') }}">Back to the list</a>
-        </li>
-    </ul>
 {% endblock %}
