--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,44 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-    </head>
-    <body>
-        {% block header %}
-            <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-                <a class="navbar-brand" href="#">Dons</a>
-                <ul class="nav navbar-nav pull-md-right">
-                    {% if is_granted("ROLE_ASSOS") %}
-                    <li class="nav-item">
-                            <a class="nav-link" href="{{ path('fos_user_profile_edit') }}">Liste des dons</a>
-                    </li>
-                    {% endif %}
-                    <li class="nav-item">
-                        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                            <a class="nav-link" href="{{ path('fos_user_profile_edit') }}"> Connecté en tant que: {{app.user.username }}</a>
+<head>
+    <meta charset="UTF-8"/>
+    <title>{% block title %}Co.Dons!{% endblock %}</title>
+    {% block stylesheets %}
+        <link rel="stylesheet" type="text/css"
+              href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">{% endblock %}
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext'
+          rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ asset('bundles/framework/css/body.css') }}">
+</head>
+<body>
+{% block header %}
+    <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+    <a class="navbar-brand" href="#">Co.Dons</a>
+    <ul class="nav navbar-nav pull-md-right">
+        {% if is_granted("ROLE_ASSOS") %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('fos_user_profile_edit') }}">Liste
+                    des dons</a>
+            </li>
+        {% endif %}
+        <li class="nav-item">
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                <a class="nav-link" href="{{ path('fos_user_profile_edit') }}">
+                    Connecté en tant que: {{ app.user.username }}</a>
 
-                        {% else %}
-                            <a class="nav-link" href="{{ path('fos_user_security_login') }}">{{ 'Connexion'|trans({}, 'FOSUserBundle') }}</a>
-                        {% endif %}
-                    </li>
-                    <li class="nav-item">
-                        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                            <a class="nav-link" href="{{ path('fos_user_security_logout') }}">
-                                {{ 'Se deconnecter'|trans({}, 'FOSUserBundle') }}
-                            </a>
-                        {% else %}
-                            <a class="nav-link" href="{{ path('fos_user_registration_register') }}">{{ 'Inscription'|trans({}, 'FOSUserBundle') }}</a>
-                        {% endif %}
-                    </li>
-                </ul>
-            </nav>{% endblock %}
-            {% block body %}
+            {% else %}
+                <a class="nav-link"
+                   href="{{ path('fos_user_security_login') }}">{{ 'Connexion'|trans({}, 'FOSUserBundle') }}</a>
+            {% endif %}
+        </li>
+        <li class="nav-item">
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                <a class="nav-link"
+                   href="{{ path('fos_user_security_logout') }}">
+                    {{ 'Se deconnecter'|trans({}, 'FOSUserBundle') }}
+                </a>
+            {% else %}
+                <a class="nav-link"
+                   href="{{ path('fos_user_registration_register') }}">{{ 'Inscription'|trans({}, 'FOSUserBundle') }}</a>
+            {% endif %}
+        </li>
+    </ul>
+    </nav>{% endblock %}
+{% block body %}
 
-            {% endblock %}
-            {% block javascripts %}{% endblock %}
-            <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js" integrity="sha384-XXXXXXXX" crossorigin="anonymous"></script>
-        </body>
-    </html>
+{% endblock %}
+{% block javascripts %}
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.1/js/tether.min.js"
+            type="text/javascript" charset="utf-8" async defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"
+            type="text/javascript" charset="utf-8" async defer></script>
+{% endblock %}
+</body>
+</html>
