--- a/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
+++ b/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
@@ -1,62 +1,75 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-{{parent()}}
+    {{ parent() }}
+    <div class="m-t-3 p-t-0.5">
+        <div id="carousel-example-generic" class="carousel slide"
+             data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="http://placehold.it/1920x1080"
+                    data-slide-to="0" class="active"></li>
+                <li data-target="http://placehold.it/1920x1080"
+                    data-slide-to="1"></li>
+                <li data-target="http://placehold.it/1920x1080"
+                    data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img src="http://placehold.it/1920x1080" alt="First slide">
+                    <div class="carousel-caption">
+                        <h3>Bienvenue sur Co Dons!</h3>
+                        <p>La plateforme incontournable pour faire des dons
+                            entre particuliers et associations</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="http://placehold.it/1920x1080" alt="Second slide">
+                    <div class="carousel-caption">
+                        <h3>...</h3>
+                        <p>...</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="http://placehold.it/1920x1080" alt="Third slide">
+                    <div class="carousel-caption">
+                        <h3>...</h3>
+                        <p>...</p>
+                    </div>
+                </div>
+            </div>
+            <a class="left carousel-control" href="#carousel-example-generic"
+               role="button" data-slide="prev">
+                <span class="icon-prev" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic"
+               role="button" data-slide="next">
+                <span class="icon-next" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-offset-3 col-md-6">
+
+                    <p>Beaucoup de personnes ont des objets qu'ils n'utilisent
+                        pas
+                        mais n'ont pas le temps de s'en débarrasser
+                        (Il faut s'organiser pour aller à la déchetterie) ou
+                        pensent
+                        que c'est dommage de jeter quelque chose qui peut encore
+                        servir.
+                        D'un autre côté, les associations sont constamment en
+                        recherche de dons.
+                        Ce site permettra aux particuliers de proposer des dons
+                        aux
+                        associations.<br>
+                        Alors n'hésitez pas !!!
+                    </p>
 
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<div id="myCarousel" class="carousel slide container" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="images/assoc1.jpg" alt="">
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="item">
-      <img src="images/assoc2.jpg" alt="">
-    </div>
-
-    <div class="item">
-      <img src="images/assoc3.jpg" alt="">
-    </div>
-
-
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-offset-3 col-md-6">
-
-<p>Beaucoup de personnes ont des objets qu'ils n'utilisent pas mais n'ont pas le temps de s'en débarrasser
-  (Il faut s'organiser pour aller à la déchetterie) ou pensent que c'est dommage de jeter quelque chose qui peut encore servir.
-   D'un autre côté, les associations sont constamment en recherche de dons.
-   Ce site permettra aux particuliers de proposer des dons aux associations.<br>
-   Alors n'hésitez pas !!!
-  </p>
-
-
-</div>
-</div>
-</div>
-
-
 {% endblock %}
