link on brand navbar

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,7 @@
 <body>
 {% block header %}
     <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="#">Co.Dons</a>
+    <a class="navbar-brand" href="/">Co.Dons</a>
     <ul class="nav navbar-nav pull-md-right">
         {% if is_granted("ROLE_ASSOS") %}
             <li class="nav-item">
