--- a/app/Resources/views/objets/show.html.twig
+++ b/app/Resources/views/objets/show.html.twig
@@ -14,12 +14,12 @@
                 <td>{{ objet.nom }}</td>
             </tr>
             <tr>
-                <th>Adresse</th>
-                <td>{{ objet.adresse }}</td>
+                <th>Description</th>
+                <td>{{ objet.description }}</td>
             </tr>
             <tr>
-                <th>Tel</th>
-                <td>{{ objet.tel }}</td>
+                <th>Categorie</th>
+                <td>{{ objet.categorie }}</td>
             </tr>
         </tbody>
     </table>
