--- a/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
+++ b/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
@@ -6,7 +6,7 @@
         <div id="carousel-example-generic" class="carousel slide"
              data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="http://placehold.it/1920x1080"
+                <li data-target=""
                     data-slide-to="0" class="active"></li>
                 <li data-target="http://placehold.it/1920x1080"
                     data-slide-to="1"></li>
