navbar part objet

--- a/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
+++ b/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
@@ -8,14 +8,14 @@
             <ol class="carousel-indicators">
                 <li data-target=""
                     data-slide-to="0" class="active"></li>
-                <li data-target="http://placehold.it/1920x1080"
+                <li data-target=""
                     data-slide-to="1"></li>
-                <li data-target="http://placehold.it/1920x1080"
+                <li data-target=""
                     data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img src="http://placehold.it/1920x1080" alt="First slide">
+                    <img src="{{ asset('bundles/framework/images/assoc1.jpg') }}" alt="First slide">
                     <div class="carousel-caption">
                         <h3>Bienvenue sur Co Dons!</h3>
                         <p>La plateforme incontournable pour faire des dons
@@ -23,14 +23,14 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="http://placehold.it/1920x1080" alt="Second slide">
+                    <img src="{{ asset('bundles/framework/images/assoc2.jpg') }}" alt="Second slide">
                     <div class="carousel-caption">
                         <h3>...</h3>
                         <p>...</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="http://placehold.it/1920x1080" alt="Third slide">
+                    <img src="{{ asset('bundles/framework/images/assoc3.jpg') }}" alt="Third slide">
                     <div class="carousel-caption">
                         <h3>...</h3>
                         <p>...</p>
