--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,6 +21,13 @@
                     des dons</a>
             </li>
         {% endif %}
+        {% if is_granted("ROLE_PART") %}
+            <li class="nav-item">
+                <a class="nav-link"
+                   href="{{ path('objets_show', {'id':app.user.id}) }}">Mes
+                    Objets</a>
+            </li>
+        {% endif %}
         <li class="nav-item">
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 <a class="nav-link" href="{{ path('fos_user_profile_edit') }}">
