--- a/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
+++ b/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
@@ -12,10 +12,13 @@
                     data-slide-to="1"></li>
                 <li data-target=""
                     data-slide-to="2"></li>
+                <li data-target=""
+                    data-slide-to="3"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img src="{{ asset('bundles/framework/images/assoc1.jpg') }}" alt="First slide">
+                    <img src="{{ asset('bundles/framework/images/assoc1.jpg') }}"
+                         alt="First slide">
                     <div class="carousel-caption">
                         <h3>Bienvenue sur Co Dons!</h3>
                         <p>La plateforme incontournable pour faire des dons
@@ -23,14 +26,24 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="{{ asset('bundles/framework/images/assoc2.jpg') }}" alt="Second slide">
+                    <img src="{{ asset('bundles/framework/images/assoc2.jpg') }}"
+                         alt="Second slide">
                     <div class="carousel-caption">
                         <h3>...</h3>
                         <p>...</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="{{ asset('bundles/framework/images/assoc3.jpg') }}" alt="Third slide">
+                    <img src="{{ asset('bundles/framework/images/assoc3.jpg') }}"
+                         alt="Third slide">
+                    <div class="carousel-caption">
+                        <h3>...</h3>
+                        <p>...</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="{{ asset('bundles/framework/images/assoc4.jpg') }}"
+                         alt="Third slide">
                     <div class="carousel-caption">
                         <h3>...</h3>
                         <p>...</p>
