--- a/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
+++ b/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     {{ parent() }}
-    <div class="m-t-3 p-t-0.5">
+    <div class="m-t-3" style="margin-top:158px">
         <div id="carousel-example-generic" class="carousel slide"
              data-ride="carousel">
             <ol class="carousel-indicators">
@@ -15,7 +15,7 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img src="http://placehold.it/1920x1080" alt="First slide">
+                    <img src="{{ asset('images/assoc1.jpg') }}" alt="First slide">
                     <div class="carousel-caption">
                         <h3>Bienvenue sur Co Dons!</h3>
                         <p>La plateforme incontournable pour faire des dons
@@ -23,14 +23,21 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="http://placehold.it/1920x1080" alt="Second slide">
+                    <img src="{{ asset('images/assoc2.jpg') }}" alt="Second slide">
                     <div class="carousel-caption">
                         <h3>...</h3>
                         <p>...</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="http://placehold.it/1920x1080" alt="Third slide">
+                    <img src="{{ asset('images/assoc3.jpg') }}" alt="Third slide">
+                    <div class="carousel-caption">
+                        <h3>...</h3>
+                        <p>...</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="{{ asset('images/assoc4.jpg') }}" alt="Third slide">
                     <div class="carousel-caption">
                         <h3>...</h3>
                         <p>...</p>
@@ -48,6 +55,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+
         <div class="container">
             <div class="row">
                 <div class="col-md-offset-3 col-md-6">
