--- a/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
+++ b/src/Partage/PartageBundle/Resources/views/Accueil/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     {{ parent() }}
-    <div class="m-t-3" style="margin-top:158px">
+    <div class="m-t-3" style="height: 100vh;">
         <div id="carousel-example-generic" class="carousel slide"
              data-ride="carousel">
             <ol class="carousel-indicators">
